--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "a timestamp api",
   "main": "index.js",
-  "scripts": { 
-    "start": "node server.js" 
+  "scripts": {
+    "start": "node server.js"
   },
   "author": "Camper",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "bulma": "^0.3.0",
+    "express": "^4.14.0",
+    "node-sass-middleware": "^0.10.1"
   }
 }
